--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
     </model-viewer>
     <section>
       <h1 onclick="modelScene()">&lt; B N Duke House</h1>
-      <img src="images/BNDH/BNDH_Side.png" alt="B N Duke House Side View">
-      <img src="images/BNDH/BNDH_Back.png" alt="B N Duke House Back View">
-      <img src="images/BNDH/BNDH_Front.png" alt="B N Duke House Front View">
+      <figure>
+        <img src="images/BNDH/BNDH_Side.png" alt="B N Duke House Side View">
+        <figcaption>Courtesy UNC, <i>Open Durham</i></figcaption>
+      </figure>
+      <figure>
+        <img src="images/BNDH/BNDH_Back.png" alt="B N Duke House Back View">
+        <figcaption>Back entrance, courtesy UNC, <i>Open Durham</i></figcaption>
+      </figure>
+      <figure>
+        <img src="images/BNDH/BNDH_Front.png" alt="B N Duke House Front View">
+        <figcaption>Courtesy State Archives, <i>Open Durham</i></figcaption>
+      </figure>
       <p>
         Designed by Charlotte architect C.C. Hook, "Four Acres" was a large Chateauesque Revival structure built on the block bounded by West Chapel Hill Street, Willard Street, Duke Street, and Jackson Street. 
         Owned by the prominent American tobacco, textile and energy industrialist, Benjamin N. Duke, later founder of Duke energy, "Four Acres" was built in 1911 on top of the original location of the former Benjamin N. Duke residence "The Terrace,"" which was relocated across West Chapel Hill Street. 
@@ -28,20 +37,34 @@
       </p>
       <figure>
         <img src="images/BNDH/BNDH_Terrace.png" alt="The Terrace">
-        <figcaption>"The Terrace"</figcaption>
+        <figcaption>'The Terrace', Looking east down West Chapel Hill St. ~1910.
+          Courtesy Duke Archives, <i>Open Durham</i></figcaption>
       </figure>
       <h2>Benjamin Newton Duke (1855-1929)</h2>
       <p>
         Son of American industrialist Washington Duke, Benjamin N. Duke entered the family tobacco business in the 1890, serving as the vice-president of the American Tobacco Company. 
         He later founded the Southern Power Company with his brother James and expanded their power facilities to supply electricity to over 300 cotton mills and other industrial companies.
       </p>
+      <figure class="protrait">
+        <img src="images/BNDH/BNDH_BND.png" alt="Benjamin N. Duke">
+        <figcaption>Benjamin Newton Duke, <i>The Chanticleer</i></figcaption>
+      </figure>
+      <p>
+      A major contributor to the economic growth of North Carolina and Durham, Benjamin N. Duke also donated substantial funds to the development of Trinity College. 
+      Not only contributing money for construction and endowment, he also further donated funds for other university operating expenses. 
+      Saving Trinity College multiple times from bankruptcies and closing its doors, Benjamin N. Duke made several major individual contributions while serving on the college's board of trustees. 
+      Out of the many gifts and contributions from Benjamin N. Dukes, one of them being the granite walls that surrounded the now East Campus grounds.
+      </p>
       <div class="last">
-        <img class="protrait" src="images/BNDH/BNDH_BND.png" alt="Benjamin N. Duke">
+        <h2 class="reference">References</h2>
         <p>
-        A major contributor to the economic growth of North Carolina and Durham, Benjamin N. Duke also donated substantial funds to the development of Trinity College. 
-        Not only contributing money for construction and endowment, he also further donated funds for other university operating expenses. 
-        Saving Trinity College multiple times from bankruptcies and closing its doors, Benjamin N. Duke made several major individual contributions while serving on the college's board of trustees. 
-        Out of the many gifts and contributions from Benjamin N. Dukes, one of them being the granite walls that surrounded the now East Campus grounds.
+        "Benjamin Newton Duke (1855-1929) | Duke University Libraries." <i>Duke.edu</i>, 2023, library.duke.edu/rubenstein/uarchives/history/articles/benjamin-newton-duke. Accessed 29 Apr. 2023.
+        <br><br>
+        "Duke, Benjamin Newton | Open Durham." <i>Opendurham.org</i>, 2023, www.opendurham.org/people/duke-benjamin-newton. Accessed 29 Apr. 2023.
+        <br><br>
+        "Duke, Benjamin Newton | NCpedia." <i>Ncpedia.org</i>, 2013, www.ncpedia.org/biography/duke-benjamin-newton. Accessed 29 Apr. 2023.
+        <br><br>
+        "Four Acres - B.N. Duke Home | Open Durham." <i>Opendurham.org</i>, 2013, www.opendurham.org/buildings/four-acres-bn-duke-home. Accessed 29 Apr. 2023.
         </p>
       </div>
     </section>
@@ -50,8 +73,10 @@
         <ul id="nav-links">
             <li><a href="index.html">B N Duke House</a></li>
             <li><a href="pages/MMChurch.html">Memorial Methodist Church</a></li>
+            <li><a href="pages/HHall.html">Harwood Hall</a></li>
             <li><a href="pages/BAudi.html">Baldwin Auditorium</a></li>
             <li><a href="pages/DChapel.html">Duke Chapel</a></li>
+            <li><a href="pages/FBuilding.html">Friedl Building</a></li>
             <li><a href="Pages/EMill.html">Erwin Cotton Mill No. 1</a></li>
         </ul>
     </nav>
