--- a/pages/BAudi.html
+++ b/pages/BAudi.html
@@ -20,9 +20,12 @@
       <h1 onclick="modelScene()">&lt; Baldwin Auditorium</h1>
       <figure>
         <img src="../images/BAudi/BAudi_Now.png" alt="The Present Baldwin Auditorium">
-        <figcaption>Baldwin Auditorium Today (<i>Open Durham</i>)</figcaption>
+        <figcaption>Baldwin Auditorium Today, <i>Open Durham</i></figcaption>
       </figure>
-      <img class="protrait" src="../images/BAudi/BAudi_MAB.png" alt="Mary Alice Baldwin">
+      <figure class="protrait">
+        <img src="../images/BAudi/BAudi_MAB.png" alt="Mary Alice Baldwin">
+        <figcaption>Mary Alice Baldwin, <i>Duke Archives</i></figcaption>
+      </figure>
       <p>
         The auditorium was built in 1927 and was originally known as the Womens College Auditorium. 
         It was re-named after Mary Alice Baldwin in 1968. 
@@ -33,7 +36,7 @@
       </p>
       <figure class="last">
         <img src="../images/BAudi/BAudi_Cons.jpg" alt="Construction of Baldwin Auditorium">
-        <figcaption>Construction of Baldwin Auditorium (<i>Open Durham</i>)</figcaption>
+        <figcaption>Construction of Baldwin Auditorium, <i>Open Durham</i></figcaption>
       </figure>
     </section>
     <footer>
@@ -42,8 +45,10 @@
           <ul id="nav-links">
               <li><a href="../index.html">B N Duke House</a></li>
               <li><a href="MMChurch.html">Memorial Methodist Church</a></li>
+              <li><a href="HHall.html">Harwood Hall</a></li>
               <li><a href="BAudi.html">Baldwin Auditorium</a></li>
               <li><a href="DChapel.html">Duke Chapel</a></li>
+              <li><a href="FBuilding.html">Friedl Building</a></li>
               <li><a href="EMill.html">Erwin Cotton Mill No. 1</a></li>
           </ul>
       </nav>
