--- a/pages/DChapel.html
+++ b/pages/DChapel.html
@@ -20,9 +20,12 @@
       <h1 onclick="modelScene()">&lt; Duke Chapel</h1>
       <figure>
         <img src="../images/DChapel/DChapel_New.jpeg" alt="Newly Completed Chapel">
-        <figcaption>Newly Completed Chapel (1932) (<i>Duke Archives</i>)</figcaption>
+        <figcaption>Newly Completed Chapel (1932), <i>Duke Archives</i></figcaption>
       </figure>
-      <img class="protrait" src="../images/DChapel/DChapel_Cons.png" alt="Chapel under Construction">
+      <figure class="protrait">
+        <img src="../images/DChapel/DChapel_Cons.png" alt="Chapel under Construction">
+        <figcaption>Chapel under Construction, <i>Duke Archives</i></figcaption>
+      </figure>
       <p>
         In regards to his new university, J.B. Duke stated: “I want the central building to be a great towering church which will dominate all of the surrounding buildings, 
         because such an edifice would be bound to have a profound influence on the spiritual life of the young men and women who come here.”
@@ -32,7 +35,7 @@
       </p>
       <figure class="last">
         <img src="../images/DChapel/DChapel_Plans.jpg" alt="Architectural Plans for Duke Chapel">
-        <figcaption>Architectural Plans for Duke Chapel (1930) (<i>Duke Archives</i>)</figcaption>
+        <figcaption>Architectural Plans for Duke Chapel (1930), <i>Duke Archives</i></figcaption>
       </figure>
     </section>
     <footer>
@@ -41,8 +44,10 @@
           <ul id="nav-links">
             <li><a href="../index.html">B N Duke House</a></li>
             <li><a href="MMChurch.html">Memorial Methodist Church</a></li>
+            <li><a href="HHall.html">Harwood Hall</a></li>
             <li><a href="BAudi.html">Baldwin Auditorium</a></li>
             <li><a href="DChapel.html">Duke Chapel</a></li>
+            <li><a href="FBuilding.html">Friedl Building</a></li>
             <li><a href="EMill.html">Erwin Cotton Mill No. 1</a></li>
           </ul>
       </nav>
