--- a/pages/EMill.html
+++ b/pages/EMill.html
@@ -20,7 +20,7 @@
       <h1 onclick="modelScene()">&lt; Erwin Cotton Mill No. 1</h1>
       <figure>
         <img src="../images/EMill/EMill_Drawing.png" alt="Drawing of Erwin Mill">
-        <figcaption>Drawing of Erwin Mill (1875-1907) (<i>Open Durham</i>)</figcaption>
+        <figcaption>Drawing of Erwin Mill (1875-1907), <i>Open Durham</i></figcaption>
       </figure>
       <p>
         Erwin Mill, incorporated by Benjamin N. Duke, was a textile mill that operated between 1893 and 1986. 
@@ -34,7 +34,7 @@
       </p>
       <figure class="last">
         <img src="../images/EMill/EMill_Complex.jpg" alt="Erwin Mill Complex in the 1930s">
-        <figcaption>Erwin Mill Complex in the 1930s (<i>Open Durham</i>)</figcaption>
+        <figcaption>Erwin Mill Complex in the 1930s, <i>Open Durham</i></figcaption>
       </figure>
     </section>
     <footer>
@@ -43,8 +43,10 @@
           <ul id="nav-links">
             <li><a href="../index.html">B N Duke House</a></li>
             <li><a href="MMChurch.html">Memorial Methodist Church</a></li>
+            <li><a href="HHall.html">Harwood Hall</a></li>
             <li><a href="BAudi.html">Baldwin Auditorium</a></li>
             <li><a href="DChapel.html">Duke Chapel</a></li>
+            <li><a href="FBuilding.html">Friedl Building</a></li>
             <li><a href="EMill.html">Erwin Cotton Mill No. 1</a></li>
           </ul>
       </nav>
