--- a/pages/MMChurch.html
+++ b/pages/MMChurch.html
@@ -33,8 +33,11 @@
         <figcaption>Model Texture from Site Visit: April 23rd 2023</figcaption>
       </figure>
       <h2>William T. Blackwell (1839-1904)</h2>
-      <img class="protrait" src="../images/MMChurch/MMC_WTB.png" alt="William T. Blackwell">
-      <p class="last">
+      <figure class="protrait">
+        <img src="../images/MMChurch/MMC_WTB.png" alt="William T. Blackwell">
+        <figcaption>William T. Blackwell</figcaption>
+      </figure>
+      <p>
         William T. Blackwell was a tobacco manufacturer born in Person County, North Carolina. 
         During the Civil War, he hired a substitute rather than serving in the military himself. 
         In the 1860s, he began manufacturing and selling tobacco, peddling his products through Eastern North Carolina. 
@@ -43,6 +46,22 @@
         In 1886, Blackwell sold his interest in the company and opened a bank, the Bank of Durham, yet his over-generous lending led him to bankruptcy in 1888. 
         After the failure of the bank, Blackwell's assets were mostly eliminated, he continued to live on West Chapel Hill St.
       </p>
+      <div class="last">
+        <h2 class="reference">References</h2>
+        <p>
+        "William T. Blackwell House | Open Durham." <i>Opendurham.org</i>, 2013, www.opendurham.org/buildings/william-t-blackwell-house. Accessed 29 Apr. 2023.
+        <br><br>
+        "Blackwell, William Thomas | NCpedia." <i>Ncpedia.org</i>, 2013, www.ncpedia.org/biography/blackwell-william-thomas. Accessed 29 Apr. 2023.
+        <br><br>
+        "Duke Memorial Methodist | Open Durham." <i>Opendurham.org</i>, 2023, www.opendurham.org/buildings/duke-memorial-methodist. Accessed 29 Apr. 2023.
+        <br><br>
+        "History beneath Our Feet." <i>Museumofdurhamhistory.org</i>, 2023, museumofdurhamhistory.org/beneathourfeet/people/BlackwellTWilliam. Accessed 29 Apr. 2023.
+        <br><br>
+        "New Acquisition Spotlight: The William T. Blackwell Family Papers - the Devil's Tale." <i>The Devil's Tale</i>, 2 May 2019, blogs.library.duke.edu/rubenstein/2019/05/02/new-acquisition-spotlight-the-william-t-blackwell-family-papers/. Accessed 29 Apr. 2023.
+        <br><br>
+        "History." <i>Duke Memorial</i>, 2023, www.dukememorial.org/history.html. Accessed 29 Apr. 2023.
+        </p>
+      </div>
     </section>
     <footer>
       <nav>
@@ -50,8 +69,10 @@
           <ul id="nav-links">
             <li><a href="../index.html">B N Duke House</a></li>
             <li><a href="MMChurch.html">Memorial Methodist Church</a></li>
+            <li><a href="HHall.html">Harwood Hall</a></li>
             <li><a href="BAudi.html">Baldwin Auditorium</a></li>
             <li><a href="DChapel.html">Duke Chapel</a></li>
+            <li><a href="FBuilding.html">Friedl Building</a></li>
             <li><a href="EMill.html">Erwin Cotton Mill No. 1</a></li>
           </ul>
       </nav>
