--- a/pages/BAudi.html
+++ b/pages/BAudi.html
@@ -34,10 +34,18 @@
         Situated at the end of the quad, the building was built to serve as the focal point for the new Women's Campus. 
         Along with the rest of the East Campus buildings being constructed during this time period, the auditorium was designed by the Office of Horace Trumbauer in the Georgian style and constructed with red brick and Vermont marble.
       </p>
-      <figure class="last">
+      <figure>
         <img src="../images/BAudi/BAudi_Cons.jpg" alt="Construction of Baldwin Auditorium">
         <figcaption>Construction of Baldwin Auditorium, <i>Open Durham</i></figcaption>
       </figure>
+      <div class="last">
+        <h2 class="reference">References</h2>
+        <p>
+        https://library.duke.edu/rubenstein/uarchives/history/exhibits/building-names/east
+        <br><br>
+        https://www.opendurham.org/buildings/baldwin-auditorium
+        </p>
+      </div>
     </section>
     <footer>
       <nav>
