--- a/pages/DChapel.html
+++ b/pages/DChapel.html
@@ -33,10 +33,20 @@
         The cornerstone for the chapel was laid in 1930, but it wasn't finished until 1932, the last of the original buildings to be completed on West Campus. 
         Along with the rest of West Campus, the chapel was built in the English Gothic style and designed by African American architect Julian Abele in the office of Horace Trumbaeaur.
       </p>
-      <figure class="last">
+      <figure>
         <img src="../images/DChapel/DChapel_Plans.jpg" alt="Architectural Plans for Duke Chapel">
         <figcaption>Architectural Plans for Duke Chapel (1930), <i>Duke Archives</i></figcaption>
       </figure>
+      <div class="last">
+        <h2 class="reference">References</h2>
+        <p>
+        https://chapel.duke.edu/about-chapel/history-architecture
+        <br><br>
+        https://exhibits.library.duke.edu/exhibits/show/chapel2016/exterior
+        <br><br>
+        https://repository.duke.edu/dc/dukeconstruction
+        </p>
+      </div>
     </section>
     <footer>
       <nav>
