--- a/pages/EMill.html
+++ b/pages/EMill.html
@@ -32,10 +32,16 @@
         In the years after the mill was built, William Erwin worked to build a mill village for the workers, complete with housing, shops, restaurants, and entertainment. 
         Essentially, he created an environment where the workers would never have to leave, giving them everything they could ever need but also ensuring almost complete control over their lives.
       </p>
-      <figure class="last">
+      <figure>
         <img src="../images/EMill/EMill_Complex.jpg" alt="Erwin Mill Complex in the 1930s">
         <figcaption>Erwin Mill Complex in the 1930s, <i>Open Durham</i></figcaption>
       </figure>
+      <div class="last">
+        <h2 class="reference">References</h2>
+        <p>
+        https://www.opendurham.org/buildings/erwin-cotton-mill-no-4
+        </p>
+      </div>
     </section>
     <footer>
       <nav>
