--- a/pages/FBuilding.html
+++ b/pages/FBuilding.html
@@ -31,10 +31,18 @@
         It was one of the classroom buildings on the main quad of the Women's Campus and housed classrooms, laboratories, offices, and a lecture hall. 
         Like the rest of the campus, it was built in the Georgian style. In 2008, the building was renamed after Ernestine Friedl, the first female dean of the Trinity College of Arts and Sciences.
       </p>
-      <figure class="last">
+      <figure>
         <img src="../images/FBuilding/FBuilding_1926.jpeg" alt="Foundations of Friedl Building">
-        <figcaption>Foundations of Friedl Building (1926), <i>Open Durham</i></figcaption>
+        <figcaption>Foundations of Friedl Building (1926), <i>Duke Archives</i></figcaption>
       </figure>
+      <div class="last">
+        <h2 class="reference">References</h2>
+        <p>
+        https://library.duke.edu/rubenstein/uarchives/history/exhibits/building-names/east
+        <br><br>
+        https://www.opendurham.org/buildings/science-building-duke-art-museum-friedl-building
+        </p>
+      </div>
     </section>
     <footer>
       <nav>
