--- a/pages/MMChurch.html
+++ b/pages/MMChurch.html
@@ -18,7 +18,10 @@
     </model-viewer> 
     <section>
       <h1 onclick="modelScene()">&lt; Duke Memorial Methodist Church</h1>
-      <img src="../images/MMChurch/MMC_Postcard.png" alt="A Post Card of Memorial Methodist Church">
+      <figure>
+        <img src="../images/MMChurch/MMC_Postcard.png" alt="A Post Card of Memorial Methodist Church">
+        <figcaption>Memorial Methodist Church, Courtesy Durham County Library, <i>Open Durham</i></figcaption>
+      </figure>
       <p>
         With the rapid growth of population the congregation at Main St. Methodist church needed larger space. 
         In 1906, the congregation acquired Blackwell's house and property and began working on the new church, Memorial Methodist in 1907. 
