--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
       <div class="last">
         <h2 class="reference">References</h2>
         <p>
-        "Benjamin Newton Duke (1855-1929) | Duke University Libraries." <i>Duke.edu</i>, 2023, library.duke.edu/rubenstein/uarchives/history/articles/benjamin-newton-duke. Accessed 29 Apr. 2023.
+        Benjamin Newton Duke (1855-1929) | Duke University Libraries. (2023). Duke.edu. https://library.duke.edu/rubenstein/uarchives/history/articles/benjamin-newton-duke
         <br><br>
-        "Duke, Benjamin Newton | Open Durham." <i>Opendurham.org</i>, 2023, www.opendurham.org/people/duke-benjamin-newton. Accessed 29 Apr. 2023.
+        Duke, Benjamin Newton | Open Durham. (2023). Opendurham.org. https://www.opendurham.org/people/duke-benjamin-newton
         <br><br>
-        "Duke, Benjamin Newton | NCpedia." <i>Ncpedia.org</i>, 2013, www.ncpedia.org/biography/duke-benjamin-newton. Accessed 29 Apr. 2023.
+        Duke, Benjamin Newton | NCpedia. (2013). Ncpedia.org. https://www.ncpedia.org/biography/duke-benjamin-newton
         <br><br>
-        "Four Acres - B.N. Duke Home | Open Durham." <i>Opendurham.org</i>, 2013, www.opendurham.org/buildings/four-acres-bn-duke-home. Accessed 29 Apr. 2023.
+        Four Acres - B.N. Duke Home | Open Durham. (2013). Opendurham.org. https://www.opendurham.org/buildings/four-acres-bn-duke-home
+        <br><br>
+        The Chanticleer [serial] : Duke University : Free Download, Borrow, and Streaming : Internet Archive. (2014). Internet Archive. https://archive.org/details/chanticleerseria01913duke/page/n9/mode/2up
         </p>
       </div>
     </section>
