--- a/pages/DChapel.html
+++ b/pages/DChapel.html
@@ -40,11 +40,11 @@
       <div class="last">
         <h2 class="reference">References</h2>
         <p>
-        https://chapel.duke.edu/about-chapel/history-architecture
+        <i>History & architecture</i>. History & Architecture | Duke University Chapel. (n.d.)., from https://chapel.duke.edu/about-chapel/history-architecture 
         <br><br>
-        https://exhibits.library.duke.edu/exhibits/show/chapel2016/exterior
+        <i>An iconic identity: Stories and voices of Duke University chapel</i>. Omeka RSS. (n.d.)., from https://exhibits.library.duke.edu/exhibits/show/chapel2016/exterior 
         <br><br>
-        https://repository.duke.edu/dc/dukeconstruction
+        <i>Duke University Construction Progress Photographs, 1925-1932 / Digital Collections / duke digital repository</i>. Duke Digital Collections. (n.d.)., from https://repository.duke.edu/dc/dukeconstruction 
         </p>
       </div>
     </section>
