--- a/pages/EMill.html
+++ b/pages/EMill.html
@@ -39,7 +39,7 @@
       <div class="last">
         <h2 class="reference">References</h2>
         <p>
-        https://www.opendurham.org/buildings/erwin-cotton-mill-no-4
+        <i>Erwin Cotton Mill No.4</i>. Open Durham. (n.d.)., from https://www.opendurham.org/buildings/erwin-cotton-mill-no-4 
         </p>
       </div>
     </section>
