--- a/pages/FBuilding.html
+++ b/pages/FBuilding.html
@@ -38,9 +38,9 @@
       <div class="last">
         <h2 class="reference">References</h2>
         <p>
-        https://library.duke.edu/rubenstein/uarchives/history/exhibits/building-names/east
+        <i>East Campus Buildings</i>. Duke University Libraries. (n.d.)., from https://library.duke.edu/rubenstein/uarchives/history/exhibits/building-names/east 
         <br><br>
-        https://www.opendurham.org/buildings/science-building-duke-art-museum-friedl-building
+        <i>Science Building/Duke Art Museum/Friedl Building</i>. Open Durham. (n.d.)., from https://www.opendurham.org/buildings/science-building-duke-art-museum-friedl-building 
         </p>
       </div>
     </section>
