--- a/pages/HHall.html
+++ b/pages/HHall.html
@@ -20,7 +20,7 @@
       <h1 onclick="modelScene()">&lt; Harwood Hall</h1>
       <figure>
         <img src="../images/HHall/HHall_West.png" alt="Harwood Hall, Looking West">
-        <figcaption>Harwood Hall, looking west, early 1950s</figcaption>
+        <figcaption>Harwood Hall, looking west, early 1950s, <i>Open Durham</i></figcaption>
       </figure>
       <p>
         In 1895-96, George Watts moved his original house across South Duke Street to make way for Harwood Hall, in the midst of the American Tobacco Company h dominating American cigarette manufacture. 
@@ -32,7 +32,7 @@
       <h2>Geroge W. Watts</h2>
       <figure class="protrait">
         <img src="../images/HHall/HHall_GWW.png" alt="Geroge W. Watts">
-        <figcaption>Geroge W. Watts</figcaption>
+        <figcaption>Geroge W. Watts, <i>NCpedia</i></figcaption>
       </figure>
       <p>
         Born in Maryland, George W. Watts (1851-1921) was an American manufacturer, financier and philanthropist. 
@@ -43,11 +43,11 @@
       <div class="last">
         <h2 class="reference">References</h2>
         <p>
-        "George Watts House - Harwood Hall | Open Durham." <i>Opendurham.org</i>, 2016, www.opendurham.org/buildings/george-watts-house-harwood-hall. Accessed 29 Apr. 2023.
+        George Watts House - Harwood Hall | Open Durham. (2016). Opendurham.org. https://www.opendurham.org/buildings/george-watts-house-harwood-hall
         <br><br>
-        "Watts, George Washington | NCpedia." <i>Ncpedia.org</i>, 2013, www.ncpedia.org/biography/watts-george-washington. Accessed 29 Apr. 2023.
+        Watts, George Washington | NCpedia. (2013). Ncpedia.org. https://www.ncpedia.org/biography/watts-george-washington
         <br><br>
-        "History beneath Our Feet." <i>Museumofdurhamhistory.org</i>, 2023, museumofdurhamhistory.org/beneathourfeet/people/WattsWGeorge. Accessed 29 Apr. 2023.
+        History Beneath Our Feet. (2023). Museumofdurhamhistory.org. http://museumofdurhamhistory.org/beneathourfeet/people/WattsWGeorge
         </p>
       </div>
     </section>
