--- a/pages/MMChurch.html
+++ b/pages/MMChurch.html
@@ -29,7 +29,7 @@
       </p>
       <figure>
         <img src="../images/MMChurch/MMC_Former.png" alt="Former  William T. Blackwell House">
-        <figcaption>Former  William T. Blackwell House (1875-1907)</figcaption>
+        <figcaption>Former  William T. Blackwell House (1875-1907), <i>Open Durham</i></figcaption>
       </figure>
       <figure>
         <img src="../images/MMChurch/MMC_Model.jpeg" alt="Model Texture from Site Visit">
@@ -38,7 +38,7 @@
       <h2>William T. Blackwell (1839-1904)</h2>
       <figure class="protrait">
         <img src="../images/MMChurch/MMC_WTB.png" alt="William T. Blackwell">
-        <figcaption>William T. Blackwell</figcaption>
+        <figcaption>William T. Blackwell, <i>Open Durham</i></figcaption>
       </figure>
       <p>
         William T. Blackwell was a tobacco manufacturer born in Person County, North Carolina. 
@@ -52,17 +52,17 @@
       <div class="last">
         <h2 class="reference">References</h2>
         <p>
-        "William T. Blackwell House | Open Durham." <i>Opendurham.org</i>, 2013, www.opendurham.org/buildings/william-t-blackwell-house. Accessed 29 Apr. 2023.
+        William T. Blackwell House | Open Durham. (2013). Opendurham.org. https://www.opendurham.org/buildings/william-t-blackwell-house
         <br><br>
-        "Blackwell, William Thomas | NCpedia." <i>Ncpedia.org</i>, 2013, www.ncpedia.org/biography/blackwell-william-thomas. Accessed 29 Apr. 2023.
+        Blackwell, William Thomas | NCpedia. (2013). Ncpedia.org. https://www.ncpedia.org/biography/blackwell-william-thomas
         <br><br>
-        "Duke Memorial Methodist | Open Durham." <i>Opendurham.org</i>, 2023, www.opendurham.org/buildings/duke-memorial-methodist. Accessed 29 Apr. 2023.
+        Duke Memorial Methodist | Open Durham. (2023). Opendurham.org. https://www.opendurham.org/buildings/duke-memorial-methodist
         <br><br>
-        "History beneath Our Feet." <i>Museumofdurhamhistory.org</i>, 2023, museumofdurhamhistory.org/beneathourfeet/people/BlackwellTWilliam. Accessed 29 Apr. 2023.
+        <i>History Beneath Our Feet</i>. (2023). Museumofdurhamhistory.org. http://museumofdurhamhistory.org/beneathourfeet/people/BlackwellTWilliam
         <br><br>
-        "New Acquisition Spotlight: The William T. Blackwell Family Papers - the Devil's Tale." <i>The Devil's Tale</i>, 2 May 2019, blogs.library.duke.edu/rubenstein/2019/05/02/new-acquisition-spotlight-the-william-t-blackwell-family-papers/. Accessed 29 Apr. 2023.
+        New Acquisition Spotlight: The William T. Blackwell Family Papers - The Devil's Tale. The Devil's Tale. https://blogs.library.duke.edu/rubenstein/2019/05/02/new-acquisition-spotlight-the-william-t-blackwell-family-papers/
         <br><br>
-        "History." <i>Duke Memorial</i>, 2023, www.dukememorial.org/history.html. Accessed 29 Apr. 2023.
+        History. (2023). DUKE MEMORIAL. https://www.dukememorial.org/history.html
         </p>
       </div>
     </section>
