--- a/pages/BAudi.html
+++ b/pages/BAudi.html
@@ -41,9 +41,9 @@
       <div class="last">
         <h2 class="reference">References</h2>
         <p>
-        https://library.duke.edu/rubenstein/uarchives/history/exhibits/building-names/east
+        <i>East Campus Buildings</i>. Duke University Libraries. (n.d.)., from https://library.duke.edu/rubenstein/uarchives/history/exhibits/building-names/east 
         <br><br>
-        https://www.opendurham.org/buildings/baldwin-auditorium
+        <i>Baldwin Auditorium</i>. Open Durham. (n.d.)., from https://www.opendurham.org/buildings/baldwin-auditorium 
         </p>
       </div>
     </section>
